--- a/www/carregister.html
+++ b/www/carregister.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Meta, title, CSS, favicons, etc. -->
@@ -7,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Gentelella Alela! | </title>
+	<title>GATS | Gelişmiş Araç Takip Sistemi</title>
 
 	<!-- Bootstrap -->
 	<link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +18,6 @@
 	<link href="vendors/nprogress/nprogress.css" rel="stylesheet">
 	<!-- iCheck -->
 	<link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
-
 	<!-- Custom Theme Style -->
 	<link href="build/css/custom.min.css" rel="stylesheet">
 </head>
@@ -28,7 +28,7 @@
 			<div class="col-md-3 left_col">
 				<div class="left_col scroll-view">
 					<div class="navbar nav_title" style="border: 0;">
-						<a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+						<a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>GATS</span></a>
 					</div>
 
 					<div class="clearfix"></div>
@@ -39,8 +39,8 @@
 							<img src="images/img.jpg" alt="..." class="img-circle profile_img">
 						</div>
 						<div class="profile_info">
-							<span>Welcome,</span>
-							<h2>John Doe</h2>
+							<span>Hoşgeldin,</span>
+							<h2>Hasan KAYA</h2>
 						</div>
 					</div>
 					<!-- /menu profile quick info -->
@@ -55,12 +55,10 @@
 									<ul class="nav child_menu">
 										<li><a href="carregister.html">Araç Hareket Kayıt</a></li>
 										<li><a href="login.html">Giriş Sayfası</a></li>
-										<li><a href="index3.html">Dashboard3</a></li>
 									</ul>
 								</li>               
 							</ul>
 						</div>
-
 					</div>
 					<!-- /sidebar menu -->
 
@@ -94,19 +92,19 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li class="">
 								<a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-									<img src="images/img.jpg" alt="">John Doe
+									<img src="images/img.jpg" alt="">Hasan KAYA
 									<span class=" fa fa-angle-down"></span>
 								</a>
 								<ul class="dropdown-menu dropdown-usermenu pull-right">
-									<li><a href="javascript:;"> Profile</a></li>
+									<li><a href="javascript:;"> Profilim</a></li>
 									<li>
 										<a href="javascript:;">
 											<span class="badge bg-red pull-right">50%</span>
-											<span>Settings</span>
+											<span>Ayarlar</span>
 										</a>
 									</li>
-									<li><a href="javascript:;">Help</a></li>
-									<li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+									<li><a href="javascript:;">Yardım</a></li>
+									<li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Çıkış Yap</a></li>
 								</ul>
 							</li>
 
@@ -120,7 +118,7 @@
 										<a>
 											<span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
 											<span>
-												<span>John Smith</span>
+												<span>Hasan KAYA</span>
 												<span class="time">3 mins ago</span>
 											</span>
 											<span class="message">
@@ -182,12 +180,11 @@
 
 			<!-- page content -->
 			<div class="right_col" role="main">
-				<div class="">
-
+				<div class="barcodebutton">
 					<div class="row">
 						<div class="col-md-12 col-sm-12 col-xs-12">
 							<div class="x_panel">
-								<a href="#" onclick="ButtonRunner();" class="btn btn-sm-lg col-sm-12 col-xs-12 btn-danger">
+								<a href="#" onclick="BarcodeRunner();" class="btn btn-sm-lg col-sm-12 col-xs-12 btn-danger">
 									<i class="fa fa-qrcode fa-5x"></i><br/>
 								</a>
 							</div>
@@ -204,7 +201,7 @@
 							</div>
 							<div class="x_content">
 								<br>
-								<form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+								<div id="demo-form2" class="form-horizontal form-label-left">
 									<div class="form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">İlgili Araç Plakası <span class="required">*</span>
 										</label>
@@ -217,17 +214,17 @@
 										<div class="col-md-9 col-sm-9 col-xs-12">
 											<div class="radio">
 												<label>
-													<input type="radio" class="flat"  name="aracharekettipi" value="1"> Teslim Al
+													<input type="radio" class="flat" name="harekettipi" value="1"> Teslim Al
 												</label>
 											</div>
 											<div class="radio">
 												<label>
-													<input type="radio" class="flat" name="aracharekettipi" value="2"> Teslim Et
+													<input type="radio" class="flat" name="harekettipi" value="2"> Teslim Et
 												</label>
 											</div>
 											<div class="radio">
 												<label>
-													<input type="radio" class="flat" name="aracharekettipi" value="3"> Yakıt Al
+													<input type="radio" class="flat" name="harekettipi" value="3"> Yakıt Al
 												</label>
 											</div>
 										</div>
@@ -243,32 +240,21 @@
 									<div class="ln_solid"></div>
 									<div class="form-group">
 										<div class="">
-											<button type="submit" onclick="sunucuresponse();" class="btn btn-success btn-lg col-xs-12">KAYDET</button>
+											<button type="submit" onclick="AracSorgula();" class="btn btn-success btn-lg col-xs-12">KAYDET</button>
 										</div>
 									</div>
-
-								</form>
+								</div>
 							</div>
-						</div>
-
-						<div class="alert alert-success alert-dismissible fade in" role="alert">
-			                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
-			                </button>
-			                <strong>Holy guacamole!</strong> Best check yo self, you're not looking too good.
-		                </div>
+						</div>						
+					</div>
+				</div>
+				<div class="row response-sonuc">
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="alert alert-dismissible fade in" role="alert"></div>
 					</div>
 				</div>
 			</div>
 			<!-- /page content -->
-
-			<!-- footer content -->
-			<footer>
-				<div class="pull-right">
-					Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
-				</div>
-				<div class="clearfix"></div>
-			</footer>
-			<!-- /footer content -->
 		</div>
 	</div>
 
@@ -284,90 +270,10 @@
 	<script src="build/js/custom.min.js"></script>
 	<!-- iCheck -->
 	<script src="vendors/iCheck/icheck.min.js"></script>
+	<!--CustomJS-->
+	<script src="vendors/custom/custom.js"></script>
 
-	<!-- Tarih Saat -->
-	<script type="text/javascript">
-	localStorage.kullanici = "1";
-
-
-
-		function addZero(i) {
-			if (i < 10) {
-				i = "0" + i;
-			}
-			return i;
-		}
-		$(document).ready(function(){
-			var tarih=new Date(Date.now());
-			var gun=tarih.getDay();
-			var ay=tarih.getMonth();
-			var yil=tarih.getFullYear();
-			var gunler= ['Pazar', 'Pazartesi', 'Salı','Çarşamba','Perşembe','Cuma','Cumartesi'];
-			var aylar= ['Ocak', 'Şubat', 'Mart','Nisan','Mayıs','Haziran','Temmuz','Ağustos','Eylül','Ekim','Kasım','Aralık'];
-			var h = addZero(tarih.getHours());
-			var m = addZero(tarih.getMinutes());
-			$('#islemzamani').html(tarih.getDate()+' '+aylar[ay]+' '+yil+' '+gunler[gun]+' '+h+ ":" +m);            
-		})
-	</script>
-	<!-- Tarih Saat -->
-
-	<script type="text/javascript">
-		$(function(){
-			$('.aracekbilgi').hide();
-			$('.aracyakitbilgi').hide();
-			$('input[name="aracharekettipi"]').on('ifClicked', function (event) {
-				if (this.value == '3') {
-					$('.aracyakitbilgi').show();
-				}else{
-					$('.aracyakitbilgi').hide();
-				}
-			});
-		});
-
-	//Barcode Runner
-	function ButtonRunner(){ 
-		cordova.plugins.barcodeScanner.scan(
-			function (result) {
-				$('.aracekbilgi').show();
-				$('#AracPlaka').val(result.text);
-			},
-			function (error) {
-				alert("Scanning failed: " + error);
-			},
-			{
-		        preferFrontCamera : false, // iOS and Android
-		        showFlipCameraButton : false, // iOS and Android
-		        showTorchButton : true, // iOS and Android
-		        torchOn: true, // Android, launch with the torch switched on (if available)
-		        prompt : "Place a barcode inside the scan area", // Android
-		        resultDisplayDuration: 500, // Android, display scanned text for X ms. 0 suppresses it entirely, default 1500
-		        formats : "QR_CODE", // default: all but PDF_417 and RSS_EXPANDED
-		        orientation : "landscape", // Android only (portrait|landscape), default unset so it rotates with the device
-		        disableAnimations : true // iOS
-		    }
-	    );
-	}
-
-	//Sunucuya Gönder...
-	function sunucuresponse(){
-		var plaka = $("#AracPlaka").val();
-		var harekettipi = $("input[name=aracharekettipi]:checked").val();
-		var yakitmiktar = $("#yakitmiktar").val();
-		var kullanici = localStorage.kullanici;
-
-		$.get('http://www.giltas.com.tr/test.php', 
-			{
-				plaka: plaka, 
-				harekettipi : harekettipi, 
-				yakitmiktar : yakitmiktar, 
-				kullanici : kullanici
-			}, 
-			function (gelen_cevap) {
-				alert(gelen_cevap);
-			});
-		return false;
-	}
-	</script>
-	<!-- Barcode Runner -->
 </body>
 </html>
+
+
